# gpx-plotly

./: LICENSE  README.md  convert_gpx_to_csv2.py  hike_data_3D.csv  main.ps1  plot_gpx_multi_trail_export.py  plot_gpx_trail.py  plot_trail.py  pyproject.toml
gpx-plotly/: Hawk's Cave Hike 10-05-2025 01_58 PM.gpx  convert_gpx_to_csv.py  desktop.ini  output.csv  plot_gpx_multi_trail_export.py  plot_gpx_trail_multi.py  plot_gpx_trail_multi0.py  pyproject.toml
gpx-plotly/imports/: Shockaloe Trail.gpx
imports/: Bjork's Cave.gpx  Hike - Frozen Head State Park North Old Mac to the Lookout Tower - Hike on 18-04-2025 03_03 PM.gpx
