[project]
name = "gpx-plotly"
version = "0.1.0"
description = "Poetry is here for environment management."
authors = [
    {name = "George Clayton Bennett",email = "GEORGE.BENNETT@memphistn.gov"}
]
license = {text = "BSD-3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytz (>=2025.2,<2026.0)",
    "plotly (>=6.1.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
